# python-micro-crc

./: pyproject.toml  readme.md
.github/workflows/: python-publish.yml
src/: crc.nim
src/microcrc/: crc.pyd
