[project]
name = "micro-crc"
version = "1.0.0"
description = "Blazing fast CRC32 via Nim, precompiled for Python."
authors = [
    { name="Strangemother", email="micro-crc32@strangemother.com" }
]

readme = "readme.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = []

[project.urls]
Homepage = "https://github.com/Strangemother/python-micro-crc32"
Repository = "https://github.com/Strangemother/python-micro-crc32"
Issues = "https://github.com/Strangemother/python-micro-crc32/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["microcrc"]
