[project]
name = "micro-crc"
version = "1.0.1"
description = "Blazing fast CRC32 via Nim, precompiled for Python."
readme = "readme.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
    { name="Strangemother", email="micro-crc32@strangemother.com" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = []


[project.urls]
Documentation = "https://github.com/Strangemother/python-micro-crc#readme"
Homepage = "https://github.com/Strangemother/python-micro-crc"
Repository = "https://github.com/Strangemother/python-micro-crc"
Issues = "https://github.com/Strangemother/python-micro-crc32/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel.force-include]
"src/microcrc/crc.pyd" = "microcrc/crc.pyd"
